--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		
 		<title>
 Project One - Index
 		</title>
 		<link rel="stylesheet" href="style.css" type="text/css">
+		<style>
+     
+    </style>
 	</head>
 
 
 	<body>
+		
+
 		<h1>Irshad Hussain</h1>
 		<h3>3201 S State Street.ihussain1@hawk.iit.edu.(319)540-9032</h3>
 		<h2>Index Page</h2>
@@ -24,6 +30,61 @@ Project One - Index
 				<a href='work.html'>Work</a>
 			</li>
 		</ul>
+		<h3>Maps with Markers and animations</h3>
+		<div id="floating-panel">
+      <button id="drop" onclick="drop()">Drop Markers</button>
+    </div>
+		<div id="map"></div>
+		 <script>
+
+      // If you're adding a number of markers, you may want to drop them on the map
+      // consecutively rather than all at once. This example shows how to use
+      // window.setTimeout() to space your markers' animation.
+
+      var neighborhoods = [
+        {lat: 52.511, lng: 13.447},
+        {lat: 52.549, lng: 13.422},
+        {lat: 52.497, lng: 13.396},
+        {lat: 52.517, lng: 13.394}
+      ];
+
+      var markers = [];
+      var map;
+
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 12,
+          center: {lat: 52.520, lng: 13.410}
+        });
+      }
+
+      function drop() {
+        clearMarkers();
+        for (var i = 0; i < neighborhoods.length; i++) {
+          addMarkerWithTimeout(neighborhoods[i], i * 200);
+        }
+      }
+
+      function addMarkerWithTimeout(position, timeout) {
+        window.setTimeout(function() {
+          markers.push(new google.maps.Marker({
+            position: position,
+            map: map,
+            animation: google.maps.Animation.DROP
+          }));
+        }, timeout);
+      }
+
+      function clearMarkers() {
+        for (var i = 0; i < markers.length; i++) {
+          markers[i].setMap(null);
+        }
+        markers = [];
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUxL-62rGqy1EdwGNwkQY6Qba2MZ3lnKg&callback=initMap">
+    </script>
 	</body>
 
 
